Se actualizan los cambios
Correcciones que permiten reiniciar el juego sin errores

--- a/2035-logica-programacion-2-Aula4/style.css
+++ b/2035-logica-programacion-2-Aula4/style.css
@@ -61,7 +61,11 @@ body::before {
     font-size: 24px;
     font-weight: 700;
     border: none;
-    margin-top: 2rem;
+    margin-top: 2rem;    
+}
+
+.container__boton:hover {
+    background:#7fb1ef;
 }
 
 .container__boton:disabled {
